// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`graphql middleware query Articles 1`] = `
Object {
  "data": Object {
    "articles": Array [
      Object {
        "author": "Cole Petersen",
        "description": "Chainlink’s price has been bearing witness to some immense volatility throughout the past few days and weeks, with buyers propelling it towards $14.00 yesterday while the entire DeFi sector saw some explosive momentum. However, the token is now facing some in…",
        "publishedAt": "2020-11-08T01:00:08Z",
        "source": Object {
          "id": null,
          "name": "newsBTC",
        },
        "title": "Funding for Chainlink Rocketed Following Latest Rally; Time for a Pullback?",
        "url": "https://www.newsbtc.com/analysis/link/funding-for-chainlink-rocketed-following-latest-rally-time-for-a-pullback/",
        "urlToImage": "https://www.newsbtc.com/wp-content/uploads/2020/11/Depositphotos_183063862_s-2019.jpg",
      },
      Object {
        "author": "Lenora Thompson, Patriotic Writer",
        "description": "This week has been a wild emotional ride. Patriots were on a MAGA high on Monday, confident on Tuesday and incredulous on Wednesday. On Thursday, they clawed their way out of the abyss, and with rampant voter fraud reports flooding Twitter, by Friday the patr…",
        "publishedAt": "2020-11-08T00:16:19Z",
        "source": Object {
          "id": null,
          "name": "Freerepublic.com",
        },
        "title": "Election Ballot Sting: Is Blockchain Watermark Simple Brilliance or Whacked Out Conspiracy Theory?",
        "url": "https://www.freerepublic.com/focus/f-bloggers/3903249/posts",
        "urlToImage": null,
      },
      Object {
        "author": "resotto",
        "description": "Article URL: https://github.com/resotto/goilerplate
Comments URL: https://news.ycombinator.com/item?id=25021175
Points: 1
# Comments: 0",
        "publishedAt": "2020-11-08T00:03:18Z",
        "source": Object {
          "id": null,
          "name": "Github.com",
        },
        "title": "Show HN: Clean Boilerplate of Go, Domain-Driven Design, Clean Architecture",
        "url": "https://github.com/resotto/goilerplate",
        "urlToImage": "https://repository-images.githubusercontent.com/297382611/c6e82880-2117-11eb-8a7d-9ad580951520",
      },
      Object {
        "author": "Nick Chong",
        "description": "With a number of leading politicos calling the presidential election for Biden, analysts have begun to wonder how Bitcoin will be affected. Gary Gensler is expected to be an advisor to the White House. Many see this as notable as the former CFTC chairman is a…",
        "publishedAt": "2020-11-08T00:00:32Z",
        "source": Object {
          "id": null,
          "name": "Bitcoinist",
        },
        "title": "Biden Administration Expected to Tap Pro-Bitcoin Politician Gary Gensler",
        "url": "https://bitcoinist.com/biden-administration-expected-to-tap-pro-bitcoin-politician-gary-gensler/",
        "urlToImage": "https://bitcoinist.com/wp-content/uploads/2020/11/dave-herring-bl3SLnH738M-unsplash.jpg",
      },
      Object {
        "author": "Nick Chong",
        "description": "Bitcoin trended on Twitter this past week as its price shot higher in the biggest move in months. In the span of a day, the price of BTC rallied by approximately $2,000, shocking most investors. The move garnered so much attention that famous celebrities bega…",
        "publishedAt": "2020-11-07T23:59:07Z",
        "source": Object {
          "id": null,
          "name": "newsBTC",
        },
        "title": "Famous Rapper Logic Just Made a “Big Investment” In Bitcoin",
        "url": "https://www.newsbtc.com/news/bitcoin/famous-rapper-logic-just-made-a-big-investment-in-bitcoin/",
        "urlToImage": "https://www.newsbtc.com/wp-content/uploads/2020/11/c-d-x-PDX_a_82obo-unsplash.jpg",
      },
      Object {
        "author": "feedfeeder",
        "description": "Amid election throes, Bitcoin goes: Bad Crypto news of the weekCointelegraph Bitcoin blazed past $15500 this week. Here's why one strategist says it's the best safe-haven out there. | Currency News | Financial and Business News | Markets InsiderBusiness Insid…",
        "publishedAt": "2020-11-07T23:52:44Z",
        "source": Object {
          "id": null,
          "name": "Slashdot.org",
        },
        "title": "Amid election throes, Bitcoin goes: Bad Crypto news of the week - Cointelegraph",
        "url": "https://slashdot.org/firehose.pl?op=view&amp;id=138342192",
        "urlToImage": null,
      },
      Object {
        "author": "Gertrude Chavez-Dreyfuss, Sujata Rao",
        "description": "An increasingly bearish picture is unfolding for the U.S. dollar, which has suffered its worst week since March on signs that Federal Reserve money printing rather than government spending may be deployed to bolster the economy in the aftermath of Tuesday's e…",
        "publishedAt": "2020-11-07T23:37:00Z",
        "source": Object {
          "id": "reuters",
          "name": "Reuters",
        },
        "title": "Analysis: Clouds gather over battered dollar in aftermath of U.S. election - Reuters Canada",
        "url": "https://ca.reuters.com/article/us-usa-markets-dollar-analysis-idCAKBN27N10Z",
        "urlToImage": "https://static.reuters.com/resources/r/?m=02&d=20201107&t=2&i=1540393499&r=LYNXMPEGA60VB&w=800",
      },
      Object {
        "author": "feedfeeder",
        "description": "3 ways Bitcoin price and stocks may react to a Biden presidencyCointelegraph Here's what a Biden presidency spells for stocks, bonds and commoditiesMarketWatch Bitcoin blazed past $15500 this week. Here's why one strategist says it's the best safe-haven out t…",
        "publishedAt": "2020-11-07T23:32:18Z",
        "source": Object {
          "id": null,
          "name": "Slashdot.org",
        },
        "title": "3 ways Bitcoin price and stocks may react to a Biden presidency - Cointelegraph",
        "url": "https://slashdot.org/firehose.pl?op=view&amp;id=138341926",
        "urlToImage": null,
      },
      Object {
        "author": null,
        "description": "This past week got some interesting logs targeting TCP/7001 (WebLogic CVE-2020-14882 - see previous diary[1][2]) looking to download and launch a shell script to install various cryptominer on the target. The shell script target SELINUX compatible hosts likel…",
        "publishedAt": "2020-11-07T23:30:52Z",
        "source": Object {
          "id": null,
          "name": "Sans.edu",
        },
        "title": "Cryptojacking Targeting WebLogic TCP/7001, (Sat, Nov 7th)",
        "url": "https://isc.sans.edu/diary.html?storyid=26768",
        "urlToImage": "https://isc.sans.edu/images/logos/isc/large.png",
      },
      Object {
        "author": "Reuters",
        "description": "A potentially divided U.S. government with Republicans in control of the Senate may mean a smaller fiscal stimulus package from lawmakers, increasing pressure on the U.S. central bank to ramp up its bond-buying and other economically supportive policies that …",
        "publishedAt": "2020-11-07T23:09:09Z",
        "source": Object {
          "id": "the-times-of-india",
          "name": "The Times of India",
        },
        "title": "Clouds gather over battered dollar in aftermath of US election",
        "url": "https://economictimes.indiatimes.com/news/international/world-news/clouds-gather-over-battered-dollar-in-aftermath-of-us-election/articleshow/79107089.cms",
        "urlToImage": "https://img.etimg.com/thumb/msid-79107085,width-1070,height-580,imgsize-948044,overlay-economictimes/photo.jpg",
      },
      Object {
        "author": "Gertrude Chavez-Dreyfuss, Sujata Rao",
        "description": "An increasingly bearish picture is unfolding for the U.S. dollar, which has suffered its worst week since March on signs that Federal Reserve money printing rather than government spending may be deployed to bolster the economy in the aftermath of Tuesday's e…",
        "publishedAt": "2020-11-07T23:03:00Z",
        "source": Object {
          "id": "reuters",
          "name": "Reuters",
        },
        "title": "ANALYSIS-Clouds gather over battered dollar in aftermath of U.S. election - Reuters",
        "url": "https://www.reuters.com/article/usa-markets-dollar-idUSL1N2HS33E",
        "urlToImage": "https://s1.reutersmedia.net/resources_v2/images/rcom-default.png?w=800",
      },
      Object {
        "author": "Gertrude Chavez-Dreyfuss, Sujata Rao",
        "description": "An increasingly bearish picture is unfolding for the U.S. dollar, which has suffered its worst week since March on signs that Federal Reserve money printing rather than government spending may be deployed to bolster the economy in the aftermath of Tuesday's e…",
        "publishedAt": "2020-11-07T23:01:00Z",
        "source": Object {
          "id": "reuters",
          "name": "Reuters",
        },
        "title": "ANALYSIS-Clouds gather over battered dollar in aftermath of U.S. election - Reuters India",
        "url": "https://www.reuters.com/article/usa-markets-dollar-idINL1N2HS33E",
        "urlToImage": "https://s1.reutersmedia.net/resources_v2/images/rcom-default.png?w=800",
      },
      Object {
        "author": "Nick Chong",
        "description": "Bitcoin has undergone a strong drop since the weekly highs of $15,975. The price of the leading cryptocurrency is $14,800 as of this article’s writing, $1,200 shy of the highs but $500 above the daily lows. In the past 24 hours, Bitcoin is down 5%. Analysts h…",
        "publishedAt": "2020-11-07T23:00:32Z",
        "source": Object {
          "id": null,
          "name": "newsBTC",
        },
        "title": "Here’s How Bitcoin Can Still Thrust to $17,000 In the Near Future",
        "url": "https://www.newsbtc.com/analysis/btc/heres-how-bitcoin-can-still-thrust-to-17000-in-the-near-future/",
        "urlToImage": "https://www.newsbtc.com/wp-content/uploads/2020/11/daniel-stone-uDX9LH4zvwI-unsplash.jpg",
      },
      Object {
        "author": "Nick Chong",
        "description": "Bitcoin has dropped dramatically since the $15,975 highs seen earlier this week, falling as low as $14,300. The coin currently trades for $15,000 after a strong bounce. Analysts see this as bullish as the low-$14,000s held as support. Though, an analyst expec…",
        "publishedAt": "2020-11-07T23:00:20Z",
        "source": Object {
          "id": null,
          "name": "Bitcoinist",
        },
        "title": "Analyst Who Called Bitcoin Drop Thinks $14,000 Is Next Due to Fractal",
        "url": "https://bitcoinist.com/analyst-who-called-bitcoin-drop-thinks-14000-is-next-due-to-fractal/",
        "urlToImage": "https://bitcoinist.com/wp-content/uploads/2020/10/marek-piwnicki-8yj7kR5FPFM-unsplash-1920x1200.jpg",
      },
      Object {
        "author": "Gertrude Chavez-Dreyfuss, Sujata Rao",
        "description": "An increasingly bearish picture is unfolding for the U.S. dollar, which has suffered its worst week since March on signs that Federal Reserve money printing rather than government spending may be deployed to bolster the economy in the aftermath of Tuesday's e…",
        "publishedAt": "2020-11-07T22:59:41Z",
        "source": Object {
          "id": "reuters",
          "name": "Reuters",
        },
        "title": "ANALYSIS-Clouds gather over battered dollar in aftermath of U.S. election",
        "url": "https://uk.reuters.com/article/us-usa-markets-dollar-analysis-idUKKBN27N10Z",
        "urlToImage": "https://static.reuters.com/resources/r/?m=02&d=20201107&t=2&i=1540393499&r=LYNXMPEGA60VB&w=800",
      },
      Object {
        "author": "Cole Petersen",
        "description": "Bitcoin is now consolidating within the lower-$15,000 region following an intense selloff overnight During this time, bears attempted to invalidate the cryptocurrency’s market structure and push it below the lower-$15,000 region, but bulls have held strong Be…",
        "publishedAt": "2020-11-07T22:00:50Z",
        "source": Object {
          "id": null,
          "name": "Bitcoinist",
        },
        "title": "Why This Data Metric Indicates Bitcoin Traders Should “Proceed with Caution”",
        "url": "https://bitcoinist.com/why-this-data-metric-indicates-bitcoin-traders-should-proceed-with-caution/",
        "urlToImage": "https://bitcoinist.com/wp-content/uploads/2020/10/hiroshi-kimura-rtX4wxMEI2M-unsplash-1920x1536.jpg",
      },
      Object {
        "author": "editors",
        "description": "Check out this week’s Bad Crypto podcast",
        "publishedAt": "2020-11-07T21:44:09Z",
        "source": Object {
          "id": null,
          "name": "Upstract.com",
        },
        "title": "Amid election throes, Bitcoin goes: Bad Crypto news of the week",
        "url": "https://upstract.com/p/2srrvnqk?ref=rss&rd=1",
        "urlToImage": "https://cdn.upstract.com/p/p9qet8SsMZUTKEKeW55o/2srrvnqk/8q3n3nxd2a_t.jpg",
      },
      Object {
        "author": "editors",
        "description": "Major media outlets have declared Joe Biden the winner of the 2020 election, leading analysts to speculate how a Biden presidency may impact Bitcoin price in 2021.",
        "publishedAt": "2020-11-07T21:42:04Z",
        "source": Object {
          "id": null,
          "name": "Upstract.com",
        },
        "title": "3 ways Bitcoin price and stocks may react to a Biden presidency",
        "url": "https://upstract.com/p/nymahzct?ref=rss&rd=1",
        "urlToImage": "https://cdn.upstract.com/p/p9qet8SsMZUTKEKeW55o/nymahzct/46t2seu6gz_t.jpg",
      },
      Object {
        "author": "Cointelegraph By Joel Comm",
        "description": "Check out this week’s Bad Crypto podcast",
        "publishedAt": "2020-11-07T21:41:00Z",
        "source": Object {
          "id": null,
          "name": "Cointelegraph",
        },
        "title": "Amid election throes, Bitcoin goes: Bad Crypto news of the week",
        "url": "https://cointelegraph.com/news/amid-election-throes-bitcoin-goes-bad-crypto-news-of-the-week",
        "urlToImage": "https://s3.cointelegraph.com/uploads/2020-11/f9184927-540b-4241-8b32-74775be76a96.jpg",
      },
      Object {
        "author": "Cointelegraph By Joseph Young",
        "description": "Major media outlets have declared Joe Biden the winner of the 2020 election, leading analysts to speculate how a Biden presidency may impact Bitcoin price in 2021.",
        "publishedAt": "2020-11-07T21:39:54Z",
        "source": Object {
          "id": null,
          "name": "Cointelegraph",
        },
        "title": "3 ways Bitcoin price and stocks may react to a Biden presidency",
        "url": "https://cointelegraph.com/news/3-ways-bitcoin-price-and-stocks-may-react-to-a-biden-presidency",
        "urlToImage": "https://s3.cointelegraph.com/uploads/2020-11/e417a450-f0aa-4efe-ad33-25759054446a.jpg",
      },
    ],
  },
}
`;

exports[`graphql middleware query Currencies 1`] = `
Object {
  "data": Object {
    "currencies": null,
  },
  "errors": Array [
    Object {
      "locations": Array [
        Object {
          "column": 9,
          "line": 3,
        },
      ],
      "message": "Unexpected error value: { code: \\"UNABLE_TO_GET_ISSUER_CERT_LOCALLY\\" }",
      "path": Array [
        "currencies",
      ],
    },
  ],
}
`;

exports[`graphql middleware query ExchangeRates 1`] = `
Object {
  "data": Object {
    "exchangeRates": null,
  },
  "errors": Array [
    Object {
      "locations": Array [
        Object {
          "column": 9,
          "line": 3,
        },
      ],
      "message": "Unexpected error value: { code: \\"UNABLE_TO_GET_ISSUER_CERT_LOCALLY\\" }",
      "path": Array [
        "exchangeRates",
      ],
    },
  ],
}
`;

exports[`graphql middleware query Name 1`] = `
Object {
  "data": Object {
    "name": "blue-sky-action",
  },
}
`;

exports[`graphql middleware query SpotPrices 1`] = `
Object {
  "data": Object {
    "spotPrices": Array [
      Object {
        "amount": 14885.55,
        "base": "BTC",
        "code": "BTC",
        "color": "#FFB119",
        "currency": "USD",
        "name": "Bitcoin",
      },
      Object {
        "amount": 254.36,
        "base": "BCH",
        "code": "BCH",
        "color": "#8DC451",
        "currency": "USD",
        "name": "Bitcoin Cash",
      },
      Object {
        "amount": 162.65393394243543,
        "base": "BSV",
        "code": "BSV",
        "color": "#EAB300",
        "currency": "USD",
        "name": "Bitcoin SV",
      },
      Object {
        "amount": 436.25,
        "base": "ETH",
        "code": "ETH",
        "color": "#6F7CBA",
        "currency": "USD",
        "name": "Ethereum",
      },
      Object {
        "amount": 5.139,
        "base": "ETC",
        "code": "ETC",
        "color": "#59D4AF",
        "currency": "USD",
        "name": "Ethereum Classic",
      },
      Object {
        "amount": 59.27,
        "base": "LTC",
        "code": "LTC",
        "color": "#B5B5B5",
        "currency": "USD",
        "name": "Litecoin",
      },
      Object {
        "amount": 0.351443,
        "base": "ZRX",
        "code": "ZRX",
        "color": "#302C2C",
        "currency": "USD",
        "name": "0x",
      },
      Object {
        "amount": 1,
        "base": "USDC",
        "code": "USDC",
        "color": "#2774C9",
        "currency": "USD",
        "name": "USD Coin",
      },
      Object {
        "amount": 0.19210008713108,
        "base": "BAT",
        "code": "BAT",
        "color": "#FF5000",
        "currency": "USD",
        "name": "Basic Attention Token",
      },
      Object {
        "amount": 0.07499035256735,
        "base": "MANA",
        "code": "MANA",
        "color": "#FF2D55",
        "currency": "USD",
        "name": "Decentraland",
      },
      Object {
        "amount": 0.7906,
        "base": "KNC",
        "code": "KNC",
        "color": "#2C8C92",
        "currency": "USD",
        "name": "Kyber Network",
      },
      Object {
        "amount": 11.80324,
        "base": "LINK",
        "code": "LINK",
        "color": "#295AD9",
        "currency": "USD",
        "name": "Chainlink",
      },
      Object {
        "amount": 0.02827352566439,
        "base": "DNT",
        "code": "DNT",
        "color": "#2C398F",
        "currency": "USD",
        "name": "district0x",
      },
      Object {
        "amount": 517.0791,
        "base": "MKR",
        "code": "MKR",
        "color": "#35AB9B",
        "currency": "USD",
        "name": "Maker",
      },
      Object {
        "amount": 0.04234470970092,
        "base": "CVC",
        "code": "CVC",
        "color": "#3AB03E",
        "currency": "USD",
        "name": "Civic",
      },
      Object {
        "amount": 3.0915,
        "base": "OMG",
        "code": "OMG",
        "color": "#0F0F0F",
        "currency": "USD",
        "name": "OMG Network",
      },
      Object {
        "amount": 1.009242,
        "base": "DAI",
        "code": "DAI",
        "color": "#F8AF1B",
        "currency": "USD",
        "name": "Dai",
      },
      Object {
        "amount": 57.27292313348389,
        "base": "ZEC",
        "code": "ZEC",
        "color": "#EBB244",
        "currency": "USD",
        "name": "Zcash",
      },
      Object {
        "amount": 0.2498,
        "base": "XRP",
        "code": "XRP",
        "color": "#222222",
        "currency": "USD",
        "name": "XRP",
      },
      Object {
        "amount": 13.83,
        "base": "REP",
        "code": "REP",
        "color": "#553580",
        "currency": "USD",
        "name": "Augur",
      },
      Object {
        "amount": 0.080259,
        "base": "XLM",
        "code": "XLM",
        "color": "#FFFFFF",
        "currency": "USD",
        "name": "Stellar Lumens",
      },
      Object {
        "amount": 2.504,
        "base": "EOS",
        "code": "EOS",
        "color": "#000000",
        "currency": "USD",
        "name": "EOS",
      },
      Object {
        "amount": 2.027,
        "base": "XTZ",
        "code": "XTZ",
        "color": "#2D7DF7",
        "currency": "USD",
        "name": "Tezos",
      },
      Object {
        "amount": 0.258,
        "base": "ALGO",
        "code": "ALGO",
        "color": "#FFFFFF",
        "currency": "USD",
        "name": "Algorand",
      },
      Object {
        "amount": 66.774,
        "base": "DASH",
        "code": "DASH",
        "color": "#008CE7",
        "currency": "USD",
        "name": "Dash",
      },
      Object {
        "amount": 4.626,
        "base": "ATOM",
        "code": "ATOM",
        "color": "#2D3147",
        "currency": "USD",
        "name": "Cosmos",
      },
      Object {
        "amount": 0.2161,
        "base": "OXT",
        "code": "OXT",
        "color": "#5E44BA",
        "currency": "USD",
        "name": "Orchid",
      },
      Object {
        "amount": 93.73,
        "base": "COMP",
        "code": "COMP",
        "color": "#070A0E",
        "currency": "USD",
        "name": "Compound",
      },
      Object {
        "amount": 13.83,
        "base": "REPV2",
        "code": "REPV2",
        "color": "#0E0E22",
        "currency": "USD",
        "name": "REPv2",
      },
      Object {
        "amount": 5.1744,
        "base": "BAND",
        "code": "BAND",
        "color": "#516FFA",
        "currency": "USD",
        "name": "Band Protocol",
      },
      Object {
        "amount": 22.9409,
        "base": "NMR",
        "code": "NMR",
        "color": "#23201F",
        "currency": "USD",
        "name": "Numeraire",
      },
      Object {
        "amount": 1.664,
        "base": "CGLD",
        "code": "CGLD",
        "color": "#FACC5D",
        "currency": "USD",
        "name": "Celo",
      },
      Object {
        "amount": 6.885,
        "base": "UMA",
        "code": "UMA",
        "color": "#F54A4A",
        "currency": "USD",
        "name": "UMA",
      },
      Object {
        "amount": 0.1438,
        "base": "LRC",
        "code": "LRC",
        "color": "#2042FF",
        "currency": "USD",
        "name": "Loopring",
      },
      Object {
        "amount": 13456.53,
        "base": "YFI",
        "code": "YFI",
        "color": "#2365D0",
        "currency": "USD",
        "name": "yearn.finance",
      },
      Object {
        "amount": 2.5051,
        "base": "UNI",
        "code": "UNI",
        "color": "#F5007A",
        "currency": "USD",
        "name": "Uniswap",
      },
      Object {
        "amount": 9.79518,
        "base": "BAL",
        "code": "BAL",
        "color": "#1D282A",
        "currency": "USD",
        "name": "Balancer",
      },
      Object {
        "amount": 0.2883,
        "base": "REN",
        "code": "REN",
        "color": "#051E3D",
        "currency": "USD",
        "name": "Ren",
      },
      Object {
        "amount": 14890.01,
        "base": "WBTC",
        "code": "WBTC",
        "color": "#282138",
        "currency": "USD",
        "name": "Wrapped Bitcoin",
      },
      Object {
        "amount": 1.19,
        "base": "EUR",
        "code": "EUR",
        "color": "#FFFFFF",
        "currency": "USD",
        "name": "Euro",
      },
      Object {
        "amount": 1.32,
        "base": "GBP",
        "code": "GBP",
        "color": "#FFFFFF",
        "currency": "USD",
        "name": "British Pound",
      },
      Object {
        "amount": 0.77,
        "base": "CAD",
        "code": "CAD",
        "color": "#FFFFFF",
        "currency": "USD",
        "name": "Canadian Dollar",
      },
      Object {
        "amount": 0.01,
        "base": "JPY",
        "code": "JPY",
        "color": "#FFFFFF",
        "currency": "USD",
        "name": "Japanese Yen",
      },
    ],
  },
}
`;

exports[`graphql middleware query TopHeadlines 1`] = `
Object {
  "data": Object {
    "topHeadlines": Array [
      Object {
        "author": "Maeve Reston and Stephen Collinson, CNN",
        "description": "President-elect Joe Biden speaks to a deeply divided nation Saturday night, making a plea for unity after four years of turmoil and conflict fomented by President Donald Trump.",
        "publishedAt": "2020-11-08T01:18:14Z",
        "source": Object {
          "id": "cnn",
          "name": "CNN",
        },
        "title": "President-elect Joe Biden seeks to unite nation with victory speech",
        "url": "http://us.cnn.com/2020/11/07/politics/biden-victory-speech-2020-election/index.html",
        "urlToImage": "https://cdn.cnn.com/cnnnext/dam/assets/201107192144-biden-event-1107-super-tease.jpg",
      },
      Object {
        "author": "Stephen Collinson and Maeve Reston, CNN",
        "description": "America has chosen Democrat Joe Biden as its 46th president, CNN projects, turning at a time of national crisis to a man whose character was forged by aching personal tragedy and who is pledging to restore calm and truth after Donald Trump's exhausting and ma…",
        "publishedAt": "2020-11-08T00:40:07Z",
        "source": Object {
          "id": "cnn",
          "name": "CNN",
        },
        "title": "Biden defeats Trump in an election he made about character of the nation and the President",
        "url": "http://us.cnn.com/2020/11/07/politics/joe-biden-wins-us-presidential-election/index.html",
        "urlToImage": "https://cdn.cnn.com/cnnnext/dam/assets/201107093022-02-centered-main-bar-final-biden-super-tease.jpg",
      },
      Object {
        "author": null,
        "description": "Across the country voters clapped for USPS workers, a turnaround for the postal system after it had faced widespread criticism for its handling of mail-in ballots.",
        "publishedAt": "2020-11-07T23:37:29.0212431Z",
        "source": Object {
          "id": "cnn",
          "name": "CNN",
        },
        "title": "USPS workers hailed as heroes after Joe Biden's win - CNN Video",
        "url": "http://us.cnn.com/videos/politics/2020/11/07/people-cheering-usps-workers-election-mh-orig.cnn",
        "urlToImage": "https://cdn.cnn.com/cnnnext/dam/assets/201107181909-usps-cheer-thumbnail-super-tease.jpg",
      },
      Object {
        "author": "Holmes Lybrand, Tara Subramaniam and Kelly Mena, CNN",
        "description": "In a tweet thread Saturday morning President Donald Trump threw out baseless claims suggesting that \\"tens of thousands\\" of illegal ballots are being used to change the results in key states.",
        "publishedAt": "2020-11-07T22:47:54Z",
        "source": Object {
          "id": "cnn",
          "name": "CNN",
        },
        "title": "Fact check: Trump falsely claims 'illegal ballots' are changing the election",
        "url": "http://us.cnn.com/2020/11/07/politics/donald-trump-illegal-ballots-fact-check/index.html",
        "urlToImage": "https://cdn.cnn.com/cnnnext/dam/assets/201106225744-donald-trump-rally-super-tease.jpg",
      },
      Object {
        "author": "Analysis by Zachary B. Wolf and Will Mullery, CNN",
        "description": "Americans who went to the polls on Election Day don't actually select the President directly.",
        "publishedAt": "2020-11-07T22:09:09Z",
        "source": Object {
          "id": "cnn",
          "name": "CNN",
        },
        "title": "What happens between now and Inauguration Day",
        "url": "http://us.cnn.com/2020/10/18/politics/electoral-college-timeline-2020-election/index.html",
        "urlToImage": "https://cdn.cnn.com/cnnnext/dam/assets/201016115324-20201016-election-day-to-inauguration-illustration-super-tease.jpg",
      },
      Object {
        "author": "Brandon Tensley and Jasmine Wright, CNN",
        "description": "Kamala Harris, who on Saturday became America's first female, first Black and first South Asian vice president-elect, represents a new face of political power after an election all about who wields power and how they use it.",
        "publishedAt": "2020-11-07T21:24:55Z",
        "source": Object {
          "id": "cnn",
          "name": "CNN",
        },
        "title": "Harris becomes the first female, first Black and first South Asian vice president-elect",
        "url": "http://us.cnn.com/2020/11/07/politics/kamala-harris-first-vice-president-female-black-south-asian/index.html",
        "urlToImage": "https://cdn.cnn.com/cnnnext/dam/assets/201102160632-04-kamala-harris-lead-image-restricted-super-tease.jpg",
      },
      Object {
        "author": "By <a href=\\"/profiles/meg-wagner\\">Meg Wagner</a>, <a href=\\"/profiles/fernando-alfonso-iii\\">Fernando Alfonso III</a>, Melissa Macaya, <a href=\\"/profiles/melissa-mahtani\\">Melissa Mahtani</a>, <a href=\\"/profiles/veronica-rocha\\">Veronica Rocha</a> and <a href=\\"/profiles/amanda-wills\\">Amanda Wills</a>, CNN",
        "description": "Joe Biden has won the presidency. Follow here for the latest.",
        "publishedAt": "2020-11-07T11:02:11Z",
        "source": Object {
          "id": "cnn",
          "name": "CNN",
        },
        "title": "Election results live: Joe Biden elected president",
        "url": "https://www.cnn.com/politics/live-news/trump-biden-election-results-11-07-20",
        "urlToImage": "https://cdn.cnn.com/cnnnext/dam/assets/201030082605-04-trump-biden-election-night-split-super-tease.jpg",
      },
      Object {
        "author": "By <a href=\\"/profiles/meg-wagner\\">Meg Wagner</a>, <a href=\\"/profiles/fernando-alfonso-iii\\">Fernando Alfonso III</a>, Melissa Macaya, <a href=\\"/profiles/melissa-mahtani\\">Melissa Mahtani</a>, <a href=\\"/profiles/veronica-rocha\\">Veronica Rocha</a> and <a href=\\"/profiles/amanda-wills\\">Amanda Wills</a>, CNN",
        "description": "Joe Biden has won the presidency. Follow here for the latest.",
        "publishedAt": "2020-11-07T11:02:11Z",
        "source": Object {
          "id": "cnn",
          "name": "CNN",
        },
        "title": "Election results live: Joe Biden elected president",
        "url": "https://www.cnn.com/politics/live-news/trump-biden-election-results-11-07-20/h_1af716903b7402bc31d79033b2667d8c",
        "urlToImage": "https://cdn.cnn.com/cnnnext/dam/assets/201030082605-04-trump-biden-election-night-split-super-tease.jpg",
      },
      Object {
        "author": null,
        "description": "View maps and real-time presidential election results for the 2020 US election. For more information, visit cnn.com/election.",
        "publishedAt": "2020-11-03T23:37:22.0160245Z",
        "source": Object {
          "id": "cnn",
          "name": "CNN",
        },
        "title": "Presidential Election Results and Electoral Map 2020",
        "url": "https://www.cnn.com/election/2020/results/president?iid=politics_election_bop#mapmode=lead",
        "urlToImage": "https://politics-static.cnn.io/2020/dev-static-assets/images/share/ge/results/president.jpg",
      },
      Object {
        "author": null,
        "description": "View CNN’s interactive and historic Electoral College maps to explore the votes needed to win the US presidential election. For more information, visit cnn.com/election.",
        "publishedAt": "2020-11-03T09:22:19.2242478Z",
        "source": Object {
          "id": "cnn",
          "name": "CNN",
        },
        "title": "Electoral College Interactive Maps: The Road to 270",
        "url": "https://www.cnn.com/election/2020/electoral-college-interactive-maps",
        "urlToImage": "https://politics-static.cnn.io/2020/static-assets/images/share/electoral-college-interactive-maps/electoral-college-interactive-maps.jpg",
      },
    ],
  },
}
`;
